--- a/ParqueoUlacit/Views/Login/Login.cshtml
+++ b/ParqueoUlacit/Views/Login/Login.cshtml
@@ -1,40 +1,41 @@
 ﻿@model ParqueoUlacit.Models.TableViewModel.UsuarioTableViewModel
-
 @{
     ViewBag.Title = "Iniciar Sesión";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2 class="text-center">Iniciar Sesión</h2>
-
-@if (!ViewData.ModelState.IsValid)
-{
-    <div class="alert alert-danger">
-        @Html.ValidationSummary()
-    </div>
-}
-
-<div class="row justify-content-center">
-    <div class="col-md-4">
-        <!-- Formulario de inicio de sesión -->
-        <form method="post" action="@Url.Action("Login", "Login")">
-            <!-- Campo para el correo electrónico -->
-            <div class="mb-3">
-                <label class="form-label">Correo Electrónico</label>
-                <input type="email" name="Correo" class="form-control" required />
+<div class="container">
+    <div class="row justify-content-center">
+        <div class="col-md-5">
+            <div class="login-header text-center mb-5">
+                <h2 class="login-title">INICIAR <span>SESIÓN</span></h2>
+                <div class="login-underline"></div>
             </div>
 
-            <!-- Campo para la contraseña -->
-            <div class="mb-3">
-                <label class="form-label">Contraseña</label>
-                <input type="password" name="Clave" class="form-control" required />
+            @if (!ViewData.ModelState.IsValid)
+            {
+                <div class="alert alert-danger">
+                    @Html.ValidationSummary()
+                </div>
+            }
+
+            <div class="form-container">
+                <!-- Formulario de inicio de sesión -->
+                <form method="post" action="@Url.Action("Login", "Login")">
+                    <!-- Campo para el correo electrónico -->
+                    <div class="mb-4">
+                        <label class="form-label">Correo Electrónico</label>
+                        <input type="email" name="Correo" class="form-control" required />
+                    </div>
+                    <!-- Campo para la contraseña -->
+                    <div class="mb-4">
+                        <label class="form-label">Contraseña</label>
+                        <input type="password" name="Clave" class="form-control" required />
+                    </div>
+                    <!-- Botón de ingreso -->
+                    <button type="submit" class="btn btn-primary w-100 mt-3">Ingresar</button>
+                </form>
             </div>
-
-            <!-- Botón de ingreso -->
-            <button type="submit" class="btn btn-primary w-100">Ingresar</button>
-        </form>
-
-        <!-- Botón que redirige a la vista de creación de usuario -->
-        
+        </div>
     </div>
 </div>
